feat: make server-unavailable retry interval configurable

--- a/module/config/i18n/en-US.json
+++ b/module/config/i18n/en-US.json
@@ -450,6 +450,10 @@
     "AdbRestart": {
       "name": "Try to restart adb when no device found",
       "help": ""
+    },
+    "ServerUnavailableRetryInterval": {
+      "name": "Server Unavailable Retry Interval (s)",
+      "help": "When \"server unavailable\" is detected, wait this many seconds before retrying login"
     }
   },
   "EmulatorInfo": {
